# qml-study

./: .gitignore  run_qml.bat
HelloWorld/01_HellowWorld/: HellowWorld.qml
HelloWorld/02_LoginUi/: LoginUi.qml
projects/08_qml_mouse_event/: 08_qml_mouse_event.qml  08_qml_mouse_event.qmlproject
projects/09_qml_state/: 09_qml_state.qml  09_qml_state.qmlproject  09_qml_state.qrc
projects/10_pos_and_layout/: 10_pos_and_layout.qmlproject  10_pos_and_layout.qrc  anchors.qml  item_pos.qml
projects/qml_import/: DOC.md  MyType.qml  qml_import.qml  qml_import.qmlproject  qml_import.qrc
src/01_HellowWorld/: HellowWorld.qml
src/02_LoginUi/: LoginUi.qml
src/cmake-qml-cpp/: CMakeLists.txt  MyClass.cpp  MyClass.h  main.cpp  main.qml
src/cpp_qml_module/: CMakeLists.txt  CppType.cpp  CppType.h  main.cpp  main.qml
src/cpp_qml_module_paint/: CMakeLists.txt  MyPainter.cpp  MyPainter.h  main.cpp  main.qml
src/qml_opencv/src/: CMakeLists.txt  XVideo.cpp  XVideo.h  install_msvs.bat  main.cpp  main.qml
src/qml_opencv/src/lib/opencv/msvc/lib/: OpenCVConfig.cmake  OpenCVModules-debug.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
